--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,38 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+@import "~bootstrap/scss/bootstrap.scss";
+body {background-image: url(https://images.financialexpress.com/2020/09/2-133.jpg?w=1200&h=800&imflag=true);
+    background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: center;
+     background-size: cover;}
+
+// {background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#cbccc8)) fixed;}
+ul{margin: 0; padding: 0;}
+li{ list-style: none;}
+.trafficLight{
+    border-radius: 5px;
+    padding: 10px;
+    background: black;
+    margin: auto;
+    width: 70px;
+    li:nth-child(1){
+        background: red;
+    }
+    li:nth-child(2){
+        background: yellow;
+    }
+    li:nth-child(3){
+        background: green;
+    }
+    li{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+}
+.selected{
+    box-shadow: #fff 0px 0px 40px 20px;
+}
+
